change mycccoin logo

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,6 @@ extends layout
 
 block content
   div(style="text-align: center ;")
-    img(src="/images/chiccocoin.png")
+    img(src="/images/mycccoin.png")
     p Welcome to #{title}
     img(src="https://media.giphy.com/media/129NVCr1UfsGTS/giphy.gif")
